# atlas-core

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT-REPORT.md  CHANGELOG_DEV.md  CHAT5_INNOVATION_LAB_MANIFEST.md  DEPLOY.md  Dockerfile  FRONTEND_BUG_REPORT.md  Makefile  Procfile  README.md  README_FLUTTER_APP.md  docker-compose.yml  pubspec.yaml  pyproject.toml  railway.json  replit.md  sitecustomize.py  test_result.md
.emergent/: emergent.yml
.luxury-backup/: App.css.bak  AtlasCore.js.bak  DialRing.js.bak
UX_DIVISION/: 00_MASTER_CHECKLIST.md  01_UX_DIVISION_BIBLE.md  02_DESIGN_SYSTEM_BIBLE.md  03_HUD_BIBLE.md  04_MOTION_LANGUAGE_BIBLE.md  05_AI_PERSONALITY_INTERACTION_BIBLE.md  06_SOUND_DESIGN_BIBLE.md  07_TYPOGRAPHY_ICONOGRAPHY_BIBLE.md  08_COLOR_MATERIALS_LIGHTING_BIBLE.md  09_ACCESSIBILITY_INCLUSIVE_DESIGN_BIBLE.md  PROJECT_GOVERNANCE_STANDARD.md  README.md
academy/: README.md  __init__.py  schemas.py  school_registry.py
archive/: README.md
atlas-agent-runtime/: README.md
atlas-api/: README.md
atlas-config/: README.md
atlas-core/: requirements.txt
atlas-core-runtime/: README.md
atlas-data/: README.md
atlas-diagnostics/: README.md
atlas-events/: README.md
atlas-knowledge-engine/: README.md
atlas-memory-engine/: README.md
atlas-persistence/: README.md
atlas-tasks/: README.md
atlas-tests/: README.md
atlas_animation_studio/: README.md  __init__.py  character_design_engine.py  color_lighting_engine.py  concept_art_engine.py  creature_design_engine.py  environment_design_engine.py  storyboard_engine.py
atlas_core/: README.md  __init__.py  fashion_academy.py  global_knowledge_map.py  luxury_curriculum.py  luxury_design_academy.py  luxury_design_academy_README.md  luxury_design_phases.py  visual.py
atlas_core_new/: __init__.py  bootstrap.py  main.py  manifest.json
atlas_platform/: README.md
backend/: README.md  __init__.py  main.py  pytest.ini  requirements-tools.txt  requirements.txt  server.py  sitecustomize.py
blueprint_bank/: README.md
clients/atlas-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/atlas-desktop/src-tauri/src/: lib.rs  main.rs
creative_intelligence/: README.md  __init__.py  creative_council.py  creative_engine.py  example_usage.py  innovation_validator.py  masters_library.py  no_generic_directive.md  originality_engine.py  schemas.py  style_synthesis.py
design_bank/: README.md
digital-campus/: ATLAS_CAMPUS_ENGINE_SOFTWARE_BLUEPRINT.md  ATLAS_DIGITAL_ENGINEERING_CAMPUS_MASTER_BLUEPRINT.md
digital-twin/: ARCHITECTURE.md  DATA_MODEL.md  README.md  REPORTS.md  REQUIREMENTS.md  SIMULATION_MODULES.md
(+1353 files in other folders)
