[project]
name = "atlas-core"
version = "0.3.1"
description = "AI persona-based educational and creative assistant system with three African/African American warrior personas"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic",
    "openai",
    "requests",
    "reportlab",
    "python-multipart",
    "pydantic-settings",
    "feedparser",
    "httpx",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas_core_new*"]
exclude = ["frontend*", "docs*", "scripts*", ".github*"]
