[project]
name = "atlas-core"
version = "0.1.0"
description = "ATLAS Core Phase 5 construction scaffold"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["atlas-tests/tests"]
pythonpath = [
  "atlas-core-runtime/src",
  "atlas-events/src",
  "atlas-tasks/src",
  "atlas-memory-engine/src",
  "atlas-knowledge-engine/src",
  "atlas-agent-runtime/src",
  "atlas-diagnostics/src",
  "atlas-api/src",
  "atlas-persistence/src",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
